Update Titles to 'Die erweiterte Studienanalyse' on Index and Episode pages

--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -634,7 +634,7 @@
                 </div>
                 <div class="episode-content">
                     <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
-                    <h2 class="episode-title">Korrespondenz System Analyse</h2>
+                    <h2 class="episode-title">Die erweiterte Studienanalyse</h2>
 
                     <div class="info-bar">
                         <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
