--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -692,6 +692,7 @@
             </div>
 
             <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
+            <h2 class="episode-title">Die erweiterte Studienanalyse</h2>
 
             <div class="info-bar">
                 <button class="info-btn" onclick="toggleInfo()">TTS</button>
