--- a/core/data/main/podcast/korrespondenz_epos.html
+++ b/core/data/main/podcast/korrespondenz_epos.html
@@ -616,16 +616,29 @@
             </div>
             <audio id="audio-player" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3" preload="metadata"></audio>
 
-            <div class="nav-links">
-                <a href="systemanalyse.html" class="nav-link prev-episode highlight">
-                    <span>Vorherige Episode: Die Studie</span>
-                </a>
-            </div>
             <div class="nav-links"
-                style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center;">
-                <a href="index.html" class="nav-link centered-link highlight">
-                    <span>Alle Episoden</span>
-                </a>
+                style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center; flex-direction: column; gap: 15px;">
+                <div style="display: flex; justify-content: center; gap: 20px;">
+                    <a href="systemanalyse.html" class="nav-link">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M19 12H5M12 19l-7-7 7-7" />
+                        </svg>
+                        <span>Vorherige Episode</span>
+                    </a>
+                    <button class="nav-link" disabled style="opacity: 0.5; cursor: not-allowed;">
+                        <span>Nächste Episode</span>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M5 12h14M12 5l7 7-7 7" />
+                        </svg>
+                    </button>
+                </div>
+                <div style="display: flex; justify-content: center;">
+                    <a href="index.html" class="nav-link highlight">
+                        <span>Alle Episoden</span>
+                    </a>
+                </div>
             </div>
         </article>
 
