--- a/core/data/main/podcast/zupftest.html
+++ b/core/data/main/podcast/zupftest.html
@@ -576,12 +576,85 @@
             </div>
 
             <div class="episode-description">
-                In dieser Podcast-Folge wird der Bericht „Villa Kunterbunt“ detailliert seziert, wobei insbesondere der
-                sogenannte „Zupftest“ als fragwürdige Diagnosemethode der <strong>Bayernwerk</strong>-Techniker im Fokus
-                steht. Die Sprecher analysieren die Diskrepanz zwischen moderner PR und der realen infrastrukturellen
-                Schlamperei, die sich auch in extrem negativen Kundenbewertungen (ca. 90 % Ein-Stern-Bewertungen bei
-                <strong>Bayernwerk</strong>/<strong>E.ON</strong>) widerspiegelt.
+                <div id="description-short">
+                    In dieser Podcast-Folge wird der Bericht „Villa Kunterbunt“ detailliert seziert, wobei insbesondere
+                    der
+                    sogenannte „Zupftest“ als fragwürdige Diagnosemethode der <strong>Bayernwerk</strong>-Techniker im
+                    Fokus
+                    steht. Die Sprecher analysieren die Diskrepanz...
+                </div>
+                <div id="description-full" style="display: none;">
+                    In dieser Podcast-Folge wird der Bericht „Villa Kunterbunt“ detailliert seziert, wobei insbesondere
+                    der
+                    sogenannte „Zupftest“ als fragwürdige Diagnosemethode der <strong>Bayernwerk</strong>-Techniker im
+                    Fokus
+                    steht. Die Sprecher analysieren die Diskrepanz zwischen moderner PR und der realen
+                    infrastrukturellen
+                    Schlamperei, die sich auch in extrem negativen Kundenbewertungen (ca. 90 % Ein-Stern-Bewertungen bei
+                    <strong>Bayernwerk</strong>/<strong>E.ON</strong>) widerspiegelt.
+                </div>
+                <div class="toggle-container" style="text-align: center; margin-top: 15px;">
+                    <button id="toggle-description-btn" onclick="toggleDescription()" class="toggle-btn">
+                        <span id="toggle-text">Mehr anzeigen</span>
+                        <svg id="toggle-icon" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M6 9l6 6 6-6" />
+                        </svg>
+                    </button>
+                </div>
             </div>
+
+            <style>
+                .toggle-btn {
+                    background: rgba(255, 255, 255, 0.05);
+                    border: 1px solid var(--glass-border);
+                    color: var(--text-muted);
+                    padding: 8px 16px;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    display: inline-flex;
+                    align-items: center;
+                    gap: 8px;
+                    font-size: 0.85rem;
+                    transition: all 0.3s ease;
+                }
+
+                .toggle-btn:hover {
+                    background: rgba(212, 175, 55, 0.1);
+                    color: var(--accent-gold);
+                    border-color: rgba(212, 175, 55, 0.3);
+                }
+
+                .toggle-btn svg {
+                    transition: transform 0.3s ease;
+                }
+
+                .toggle-btn.expanded svg {
+                    transform: rotate(180deg);
+                }
+            </style>
+
+            <script>
+                function toggleDescription() {
+                    const shortDesc = document.getElementById('description-short');
+                    const fullDesc = document.getElementById('description-full');
+                    const btn = document.getElementById('toggle-description-btn');
+                    const text = document.getElementById('toggle-text');
+                    const icon = document.getElementById('toggle-icon');
+
+                    if (fullDesc.style.display === 'none') {
+                        fullDesc.style.display = 'block';
+                        shortDesc.style.display = 'none';
+                        text.textContent = 'Weniger anzeigen';
+                        btn.classList.add('expanded');
+                    } else {
+                        fullDesc.style.display = 'none';
+                        shortDesc.style.display = 'block';
+                        text.textContent = 'Mehr anzeigen';
+                        btn.classList.remove('expanded');
+                    }
+                }
+            </script>
 
             <div class="player-controls">
                 <button class="control-btn" onclick="skip(-30)" title="-30s">
@@ -619,19 +692,29 @@
             </div>
             <audio id="audio-player" src="../audio/villa_kunterbunt_zupftest_podcast.mp3" preload="metadata"></audio>
 
-            <div class="nav-links">
-                <a href="deepdive.html" class="nav-link prev-episode highlight">
-                    <span>Vorherige Episode: Der DeepDive</span>
-                </a>
-                <a href="systemanalyse.html" class="nav-link next-episode highlight">
-                    <span>Nächste Episode: Die Studie</span>
-                </a>
-            </div>
             <div class="nav-links"
-                style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center;">
-                <a href="index.html" class="nav-link centered-link highlight">
-                    <span>Alle Episoden</span>
-                </a>
+                style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center; flex-direction: column; gap: 15px;">
+                <div style="display: flex; justify-content: center; gap: 20px;">
+                    <a href="deepdive.html" class="nav-link">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M19 12H5M12 19l-7-7 7-7" />
+                        </svg>
+                        <span>Vorherige Episode</span>
+                    </a>
+                    <a href="systemanalyse.html" class="nav-link">
+                        <span>Nächste Episode</span>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M5 12h14M12 5l7 7-7 7" />
+                        </svg>
+                    </a>
+                </div>
+                <div style="display: flex; justify-content: center;">
+                    <a href="index.html" class="nav-link highlight">
+                        <span>Alle Episoden</span>
+                    </a>
+                </div>
             </div>
         </article>
 
