Update Episode VI (aBook) titles, description, and centering

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -527,7 +527,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Die Anthologie | Episode VI - aBook</div>
+            <div class="subtitle">Die Anthologie | Episode VI - Das Hörbuch (beta)</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
@@ -545,7 +545,7 @@
             <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_back_thumb.png" alt="Cover Art"
                 class="cover-art">
 
-            <div class="episode-tag">Cowork Podcast</div>
+            <div class="episode-tag">Episode VI - Das Hörbuch (beta)</div>
 
             <div class="info-bar">
                 <button class="info-btn" onclick="toggleInfo()">TTS</button>
@@ -565,8 +565,100 @@
             </div>
 
             <div class="episode-description">
-                Die sechste Episode als Hörbuch. Ein <strong>Cowork Podcast</strong> aus dem Coworking Space.
+                <div id="description-short">
+                    In Episode 6, „Das Erwachen des Feedbacks“, erreicht die Saga um die „<strong>Villa
+                        Kunterbunt</strong>“ ihren kommunikativen Höhepunkt. Nachdem in den vorangegangenen Analysen die
+                    systemtheoretischen Schwachstellen beleuchtet wurden, taucht diese Folge tief in die reale
+                    Korrespondenz...
+                </div>
+                <div id="description-full" style="display: none;">
+                    In Episode 6, „Das Erwachen des Feedbacks“, erreicht die Saga um die „<strong>Villa
+                        Kunterbunt</strong>“ ihren kommunikativen Höhepunkt. Nachdem in den vorangegangenen Analysen die
+                    systemtheoretischen Schwachstellen beleuchtet wurden, taucht diese Folge tief in die reale
+                    Korrespondenz zwischen dem „<strong>Root-User</strong>“ der Villa und den Energieriesen
+                    <strong>E.ON</strong> und <strong>Bayernwerk</strong> ein. Der Hörer wird Zeuge einer
+                    außergewöhnlichen <strong>Customer Journey</strong>, die den Weg von technischer Frustration hin zu
+                    einem literarisch-satirischen Mahnmal der Service-Realität nachzeichnet.
+                    <br><br>
+                    Die Episode dekonstruiert die <strong>psychologischen und prozessualen Barrieren</strong> moderner
+                    Großkonzerne. Während <strong>E.ON</strong> als Negativbeispiel für systemisches Versagen und
+                    verzögerte Reaktionen herangezogen wird – eine Strategie, die der Absender mit der Taktung von
+                    <strong>Marvel-Blockbustern</strong> vergleicht –, bietet die Antwort des
+                    <strong>Bayernwerks</strong> einen Lichtblick in Sachen <strong>Krisen-PR</strong>. Die Analyse
+                    zeigt auf, wie professionelles <strong>Beschwerdemanagement</strong> selbst auf schärfste Satire
+                    konstruktiv reagieren kann, um verloren gegangenes Vertrauen zurückzugewinnen.
+                    <br><br>
+                    Besonderes Augenmerk liegt auf der Nutzung von <strong>Open-Source-Plattformen</strong> wie
+                    <strong>GitHub</strong> als Werkzeug der <strong>Kundenselbstverteidigung</strong>. Die Folge
+                    liefert wertvolle Erkenntnisse für Spezialisten in den Bereichen <strong>IT-Governance</strong>,
+                    <strong>Unternehmenskommunikation</strong> und <strong>Service-Design</strong>. Es wird deutlich,
+                    dass in einer Welt der automatisierten <strong>Ticket-Systeme</strong> menschliche
+                    <strong>Empathie</strong> und intellektuelle <strong>Redlichkeit</strong> die einzigen wirksamen
+                    Mittel gegen die „Mauer aus Textbausteinen“ sind. Ein fesselndes Lehrstück über die Macht des Wortes
+                    und die notwendige Transformation von <strong>Schatten-IT</strong> in transparente Prozesse.
+                </div>
+                <div class="toggle-container" style="text-align: center; margin-top: 15px;">
+                    <button id="toggle-description-btn" onclick="toggleDescription()" class="toggle-btn">
+                        <span id="toggle-text">Mehr anzeigen</span>
+                        <svg id="toggle-icon" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M6 9l6 6 6-6" />
+                        </svg>
+                    </button>
+                </div>
             </div>
+
+            <style>
+                .toggle-btn {
+                    background: rgba(255, 255, 255, 0.05);
+                    border: 1px solid var(--glass-border);
+                    color: var(--text-muted);
+                    padding: 8px 16px;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    display: inline-flex;
+                    align-items: center;
+                    gap: 8px;
+                    font-size: 0.85rem;
+                    transition: all 0.3s ease;
+                }
+
+                .toggle-btn:hover {
+                    background: rgba(212, 175, 55, 0.1);
+                    color: var(--accent-gold);
+                    border-color: rgba(212, 175, 55, 0.3);
+                }
+
+                .toggle-btn svg {
+                    transition: transform 0.3s ease;
+                }
+
+                .toggle-btn.expanded svg {
+                    transform: rotate(180deg);
+                }
+            </style>
+
+            <script>
+                function toggleDescription() {
+                    const shortDesc = document.getElementById('description-short');
+                    const fullDesc = document.getElementById('description-full');
+                    const btn = document.getElementById('toggle-description-btn');
+                    const text = document.getElementById('toggle-text');
+                    const icon = document.getElementById('toggle-icon');
+
+                    if (fullDesc.style.display === 'none') {
+                        fullDesc.style.display = 'block';
+                        shortDesc.style.display = 'none';
+                        text.textContent = 'Weniger anzeigen';
+                        btn.classList.add('expanded');
+                    } else {
+                        fullDesc.style.display = 'none';
+                        shortDesc.style.display = 'block';
+                        text.textContent = 'Mehr anzeigen';
+                        btn.classList.remove('expanded');
+                    }
+                }
+            </script>
 
             <div class="player-controls">
                 <button class="control-btn" onclick="skip(-30)" title="-30s">
