--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -626,8 +626,8 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">Cowork Podcast</div>
-                    <h2 class="episode-title">Episode VI - aBook</h2>
+                    <div class="episode-tag">Episode VI - Das Hörbuch (beta)</div>
+                    <h2 class="episode-title">Das Hörbuch (beta)</h2>
 
                     <div class="info-bar">
                         <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
@@ -647,7 +647,8 @@
                     </div>
 
                     <div class="episode-description">
-                        Die sechste Episode als Hörbuch. Ein <strong>Cowork Podcast</strong> aus dem Coworking Space.
+                        Satire als letzte Instanz: Episode 6 dokumentiert den kommunikativen Schlagabtausch zwischen der
+                        „Villa Kunterbunt“ und Energiekonzernen – ein Lehrstück über Krisen-PR und Service-Realität.
                     </div>
                     <div class="player-controls">
                         <button class="control-btn" onclick="skip(1, -30)" title="-30s">
