Link source PDFs to Cowork and Meta podcast sections

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -635,7 +635,8 @@
 
                     <div class="info-bar">
                         <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
-                        <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
+                        <button class="info-btn source-btn has-source"
+                            onclick="openSource('../documents/die_villa_kunterbunt_anthologie.pdf')">Quelle</button>
                     </div>
 
                     <div id="info-text-1" class="info-text">
