Standardize Quelle button colors and fix Cowork cover start state

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -429,16 +429,22 @@
         }
 
         .info-btn.source-btn.no-source {
-            background: rgba(255, 50, 50, 0.15);
-            border-color: rgba(255, 50, 50, 0.3);
-            color: rgba(255, 100, 100, 0.8);
+            background: rgba(220, 53, 69, 0.1);
+            border-color: rgba(220, 53, 69, 0.3);
+            color: #ff4d4d;
             cursor: default;
         }
 
+        .info-btn.source-btn.has-source {
+            background: rgba(40, 167, 69, 0.1);
+            border-color: rgba(40, 167, 69, 0.3);
+            color: #2ecc71;
+        }
+
         .info-btn.source-btn.has-source:hover {
-            background: rgba(212, 175, 55, 0.15);
-            border-color: rgba(212, 175, 55, 0.3);
-            color: var(--accent-gold);
+            background: rgba(40, 167, 69, 0.2);
+            border-color: rgba(40, 167, 69, 0.5);
+            color: #2ecc71;
         }
 
         .info-text {
@@ -542,7 +548,7 @@
                  Wait, I swapped them in index.html to put audiobook_cover_back FIRST.
                  So here I will use audiobook_cover_back as the main image to match the user's preference for "start position".
             -->
-            <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png" alt="Cover Art"
+            <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_back_thumb.png" alt="Cover Art"
                 class="cover-art">
 
             <div class="episode-tag">Episode VI - Das Hörbuch (beta)</div>
