--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -428,9 +428,9 @@
         }
 
         .info-btn.source-btn.no-source {
-            background: rgba(255, 50, 50, 0.15);
-            border-color: rgba(255, 50, 50, 0.3);
-            color: rgba(255, 100, 100, 0.8);
+            background: rgba(220, 53, 69, 0.1);
+            border-color: rgba(220, 53, 69, 0.3);
+            color: #ff4d4d;
             cursor: default;
         }
 
@@ -440,11 +440,16 @@
             color: #28a745;
         }
 
+        .info-btn.source-btn.has-source {
+            background: rgba(40, 167, 69, 0.1);
+            border-color: rgba(40, 167, 69, 0.3);
+            color: #2ecc71;
+        }
+
         .info-btn.source-btn.has-source:hover {
-            background: rgba(40, 167, 69, 0.25);
+            background: rgba(40, 167, 69, 0.2);
             border-color: rgba(40, 167, 69, 0.5);
-            color: #34ce57;
-            box-shadow: 0 0 10px rgba(40, 167, 69, 0.2);
+            color: #2ecc71;
         }
 
         .info-text {
