--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -449,16 +449,22 @@
         }
 
         .info-btn.source-btn.no-source {
-            background: rgba(255, 50, 50, 0.15);
-            border-color: rgba(255, 50, 50, 0.3);
-            color: rgba(255, 100, 100, 0.8);
+            background: rgba(220, 53, 69, 0.1);
+            border-color: rgba(220, 53, 69, 0.3);
+            color: #ff4d4d;
             cursor: default;
         }
 
+        .info-btn.source-btn.has-source {
+            background: rgba(40, 167, 69, 0.1);
+            border-color: rgba(40, 167, 69, 0.3);
+            color: #2ecc71;
+        }
+
         .info-btn.source-btn.has-source:hover {
-            background: rgba(212, 175, 55, 0.15);
-            border-color: rgba(212, 175, 55, 0.3);
-            color: var(--accent-gold);
+            background: rgba(40, 167, 69, 0.2);
+            border-color: rgba(40, 167, 69, 0.5);
+            color: #2ecc71;
         }
 
         .info-text {
