Restore flip card in abook.html and fix Cowork cover defaults

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -574,7 +574,7 @@
             <div class="episode-tag">Episode VI - Das Hörbuch (beta)</div>
 
             <div class="info-bar">
-                <button id="tts-btn" id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
+                <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
                 <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
             </div>
 
